--- a/index.html
+++ b/index.html
@@ -42,18 +42,10 @@
             <div class="title">
                 <h1>Le grand Quizz de Becode</h1>
             </div>
-            <div class="timer">
-                <div class="timer_txt">
-                    <p>Time left :</p>
-                </div>
-                <div class="timer_sec">
-                    <p>90</p>
-                </div>
-            </div>
         </header>
 
     <!--Theme choose-->
-    <section class="theme">
+    <section class="theme" id="choix">
         <div class="option_theme">
             <div class="row row-cols-3">
                 <div class="col">
@@ -89,6 +81,21 @@
                 </div>  
             </div>
         </div>
+    </section>
+
+    <!--timer-->
+    <section id='app'>
+        <div class="base-timer">
+            <svg class="base-timer__svg" viewbox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+                <g class="base-timer__circle">
+                    <circle class="base-timer__path-elapsed" cx="50" cy="50" r="45" />
+                </g>
+            </svg>
+            <span id="base-timer-label" class="base-timer__label">
+                
+            </span>
+        </div>
+        
     </section>
 
     <!--Footer-->
